# tema-dirigido

./: CMakeLists.txt  README.md  diretrizes.txt  main.cpp
ev3/: init.sh  main.py
imagem/: README.md
kinect/: CMakeLists.txt  levelCurves.cpp  main.cpp  myFileLogger.cpp
