cmake_minimum_required(VERSION 2.8)
if(CMAKE_COMPILER_IS_GNUCXX)
	add_definitions(-std=gnu++1y)
endif()
project( main )
add_executable( main main.cpp )
find_package( OpenCV REQUIRED )
find_package( freenect2 REQUIRED )
find_package(PkgConfig REQUIRED)
find_package(  OpenGL )
include_directories(${GLFW_INCLUDE_DIRS})
target_link_libraries(main ${GLFW_LIBRARIES})
target_link_libraries(main ${OpenCV_LIBS} )
target_link_libraries(main ${freenect2_LIBRARIES} )
